@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.teledunetListUpdater"
        name="Teledunet List Updater"
-       version="1.0.1"
+       version="1.0.2"
        provider-name="AS0x16">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
