@@ -2,3 +2,5 @@
 Add some paramerters to the m3u file to used it with the "Simple IPTV"-Plugin
 [B]Version 1.0.1[/B]
 Option "Delete Settings/Login" added
+[B]Version 1.0.2[/B]
+script optimized
